--- a/views/dashboard/dashboardscripts.ejs
+++ b/views/dashboard/dashboardscripts.ejs
@@ -753,7 +753,7 @@
                         if (salesData && Object.keys(salesData).length > 0) {
                             Object.keys(salesData).forEach((paymentType) => {
                                 const listItem = $('<li>').addClass('nav-item sales-options text-center mb-1');
-                                const anchorTag = $('<a>').addClass('sales-link active')
+                                const anchorTag = $('<a>').addClass('sales-link')
                                     .attr('data-toggle', 'pill')
                                     .attr('href', '#')
                                     .attr('role', 'tab')
