--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -275,6 +275,7 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="card-body p-0 gross-sales-chart">
+                                                        <canvas id="payment-sales-chart"></canvas>
                                                     </div>
                                                 </div>
                                             </div>
