--- a/views/reports/reports.ejs
+++ b/views/reports/reports.ejs
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="row mb-2 mt-2">
         <div class="col-md-7">
-
+            <span class="h3" id="dashboard-branch-name" style="color: rgb(17, 146, 146);"></span>
         </div>
         <div class="col-md-3">
             <div class="input-group shadow">
@@ -14,14 +14,15 @@
                         class="fas fa-caret-right"></i></button>
             </div>
         </div>
+        
         <div class="col-md-2">
             <div class="customdropdown">
-                <div class="select selectbranch">
+                <div class="select selectbranch text-center">
                     <span id="selectedbranch">Select Branch</span>
                     <i class="fa fa-chevron-left"></i>
                 </div>
                 <input autocomplete="off" type="hidden" name="branchid" id="branchid">
-                <ul class="customdropdown-menu branchlist"></ul>
+                <ul class="customdropdown-menu branchlist text-center"></ul>
             </div>
         </div>
     </div>
@@ -44,28 +45,16 @@
                             </a>
                         </li>
                         <li class="nav-item sales-options text-center mb-1">
-                            <a class="sales-link" id="refunds-option" data-toggle="pill" href="#" role="tab"
-                                aria-controls="refunds" aria-selected="false">
-                                <span>Branches</span><br>
-
-                            </a>
-                        </li>
-                        <li class="nav-item sales-options text-center mb-1">
-                            <a class="sales-link no-wrap" id="discounts-option" data-toggle="pill" href="#" role="tab"
-                                aria-controls="discounts" aria-selected="false">
-                                <span>Payment</span><br>
-                            </a>
-                        </li>
-                        <li class="nav-item sales-options text-center mb-1">
-                            <a class="sales-link" id="netsales-option" data-toggle="pill" href="#" role="tab"
-                                aria-controls="netsales" aria-selected="false">
-                                <span>Inventory</span><br>
+                            <a class="sales-link" id="others-option" data-toggle="pill" href="#others-content" role="tab"
+                                aria-controls="others" aria-selected="false">
+                                <span>Others</span><br>
                             </a>
                         </li>
                     </ul>
                 </div>
                 <div class="card-body p-3" style="height: 735px;">
                     <div class="tab-content" id="sales-tab-contents">
+
                         <div class="tab-pane show active" id="sales-content" role="tabpanel"
                             aria-labelledby="grosssales-option">
                             <div class="row">
@@ -248,7 +237,7 @@
                                         <div class="card-body">
                                             <div class="row">
                                                 <div class="col">
-                                                    <div class="h5 pb-1">Top Selling Products</div>
+                                                    <div class="h5 pb-1">Sold Products</div>
                                                     <div class="table-responsive scroll-cardbody-size-sm border">
                                                         <table class="table table-bordered custom-mobile-table"
                                                             id="top-selling-products-table" width="100%"
@@ -290,7 +279,7 @@
                                                     </div>
                                                     <div class="row justify-content-center mt-1">
                                                         <div class="col-md-auto text-center">
-                                                            <span class="h6" style="color: rgb(17, 146, 146);">Employee
+                                                            <span class="h6" style="color: rgb(17, 146, 146);">Cashier
                                                                 Name</span>
                                                         </div>
                                                     </div>
@@ -298,7 +287,7 @@
                                                         <div class="col text-center">
                                                             <div class="customdropdown text-center">
                                                                 <div class="select selectcashier">
-                                                                    <span class="h5" id="selectedcashier">Select cashier</span>
+                                                                    <span class="" id="selectedcashier">Select cashier</span>
                                                                     <i class="fa fa-chevron-left"></i>
                                                                 </div>
                                                                 <input autocomplete="off" type="hidden" name="cashierid" id="cashierid">
@@ -378,7 +367,7 @@
                                                 </div>
                                                 <div class="row p-3">
                                                     <div class="col-md-12">
-                                                        <div class="btn btn-outline-inventory w-100">
+                                                        <div class="btn btn-outline-inventory w-100" id="downloadPDF">
                                                             <span class="h5">Export Data</span>
                                                         </div>
                                                     </div>
@@ -433,6 +422,39 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="tab-pane" id="others-content" role="tabpanel" aria-labelledby="others-option">
+                            <div class="row">
+                                <div class="col-md-3">
+                                    <div class="card shadow" style="height: 700px;">
+                                        <div class="card-body">
+                                            <div class="row">
+                                                <div class="col-md text-center">
+                                                    <span class="h4" style="color: rgb(17, 146, 146);">Payment Types</span>
+                                                </div>
+                                            </div>
+                                            <hr class="sidebar-divider">
+                                            <div class="" id="payment-sales-display">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-9">
+                                    <div class="card shadow" style="height: 350px;">
+                                        <div class="card-body">
+                                            <div class="row">
+                                                <div class="col">
+                                                    <span class="h5">
+                                                       Graph
+                                                    </span>
+                                                </div>
+                                            </div>
+                                            <canvas class="p-2" id="payment-type-graph"></canvas>
                                         </div>
                                     </div>
                                 </div>
