--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -18,11 +18,11 @@
   </li>
 
     <!-- Nav Item - Dashboard -->
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link" href="/reports">
         <i class="fas fa-chart-bar"></i>
         <span class="text-white">Reports</span></a>
-    </li>
+    </li> -->
 
   <!-- Divider -->
   <hr class="sidebar-divider" />
