--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -38,7 +38,7 @@
     <div id="collapseMaster" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
 
       <div class="bg-options py-2 collapse-inner rounded">
-        <h6 class="collapse-header text-black">User Configuration:</h6>
+        <h6 class="collapse-header ">User Configuration:</h6>
 
         <% if (accesstype==="Owner" || accesstype==="Manager" ) { %>
 
@@ -63,7 +63,7 @@
           </a>
 
           <hr class="sidebar-divider" />
-          <h6 class="collapse-header text-black">Production:</h6>
+          <h6 class="collapse-header ">Production:</h6>
           <!-- <a class="collapse-item" href="/materialcost">
             <span>Material Cost</span>
           </a> -->
@@ -78,7 +78,7 @@
           </a>
 
           <hr class="sidebar-divider" />
-          <h6 class="collapse-header text-black">Sales & POS:</h6>
+          <h6 class="collapse-header ">Sales & POS:</h6>
           <a class="collapse-item" href="/payment">
             <i class="far fa-circle mr-1 sb-icon-clr"></i>
             <span>Payment</span>
@@ -102,7 +102,7 @@
 
 
           <hr class="sidebar-divider" />
-          <h6 class="collapse-header text-black">Authentication:</h6>
+          <h6 class="collapse-header ">Authentication:</h6>
           <a class="collapse-item" href="/users">
             <i class="far fa-circle mr-1 sb-icon-clr"></i>
             <span>Users</span>
