--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -71,8 +71,8 @@
         </div>
 
     </div>
-
-    <div class="card shadow mb-4 cardbody-size-710">
+    <!-- cardbody-size-710 -->
+    <div class="card shadow mb-2">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
                 aria-valuemax="100">
@@ -93,7 +93,7 @@
                 </div>
                 <div class="col-md-9">
                     <div class="row d-flex justify-content-center">
-                        <div class="col-md-4 mb-1">
+                        <div class="col-md-3 mb-1">
                             <div class="customdropdown">
                                 <div class="select selectcategory">
                                     <span id="selectedcategory">Filter by Category</span>
@@ -105,10 +105,10 @@
                             </div>
                         </div>
                         <% if (accesstype === "Owner") { %>
-                            <div class="col-md-4 mb-1">
+                            <div class="col-md-3 mb-1">
                                 <div class="customdropdown">
                                     <div class="select selectbranch">
-                                        <span id="selectedbranch">Filter by Branch</span>
+                                        <span id="selectedbranch">Export by Branch</span>
                                         <i class="fa fa-chevron-left"></i>
                                     </div>
                                     <input type="hidden" name="branchfilter" id="branchfilter">
@@ -117,10 +117,10 @@
                                 </div>
                             </div>
                         <% } else { %>
-                            <div class="col-md-4 mb-1" hidden>
+                            <div class="col-md-3 mb-1" hidden>
                                 <div class="customdropdown">
                                     <div class="select selectbranch">
-                                        <span id="selectedbranch">Filter by Branch</span>
+                                        <span id="selectedbranch">Export by Branch</span>
                                         <i class="fa fa-chevron-left"></i>
                                     </div>
                                     <input type="hidden" name="branchfilter" id="branchfilter">
@@ -129,7 +129,7 @@
                                 </div>
                             </div>
                         <% } %>
-                        <div class="col-md-3 mb-1">
+                        <div class="col-md-5 mb-1">
                             <div class="input-group">
                                 <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2"
@@ -150,7 +150,7 @@
                 </div>
             </div>
         </div>
-        <div class="card-body">
+        <!-- <div class="card-body">
             <div class="table-responsive scroll-cardbody-size-710 border">
                 <table class="table table-bordered custom-mobile-table" id="productinventory-datatable" width="100%"
                     cellspacing="10">
@@ -166,6 +166,70 @@
                     <tbody>
                     </tbody>
                 </table>
+            </div>
+        </div> -->
+    </div>
+
+    <div class="card shadow">
+        <div class="card-body">
+            <div class="row">
+                <div class="col-md-9">
+                    <div class="table-responsive border" style="height: 720px;">
+                        <table class="table table-bordered custom-mobile-table" id="inventory-table" width="100%"
+                            cellspacing="10">
+                            <thead class="table-header text-black">
+                                <tr>
+                                    <th class="w-10 h5">ID</th>
+                                    <th class="w-40 text-left h5">Name</th>
+                                    <th class="text-left h5">Category</th>
+                                    <th class="text-left h5">Price</th>
+                                    <th class="text-left h5">Cost</th>
+                                    <th class="text-left h5">Stocks</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card" style="height: 720px;">
+                        <div class="row mt-2">
+                            <div class="col-md text-center">
+                                <div id="product-image">
+                                    <img id="product-img" class="inventory-img" src="/images/img/asvesti.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <hr class="sidebar-divider"/>
+                        <div class="row ml-2">
+                            <div class="col-md-12">
+                                <span class="h5 label-title">
+                                    Name:
+                                </span>
+                                <span class="h5" id="product-name">No Data</span>
+                            </div>
+                        </div>
+                        <div class="row ml-2 mt-2">
+                            <div class="col-md-12">
+                                <span class="h5 label-title">
+                                    ID: 
+                                </span>
+                                <span class="h5" id="product-id">No Data</span>
+                            </div>
+                        </div>
+                        <hr class="sidebar-divider"/>
+                        <div id="product-details">
+                            <div class="row ml-2">
+                                <div class="col-md-12 text-center">
+                                   <span class="h5">Click Row to Display Details</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
