--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -212,6 +212,10 @@
                                                     </span>
                                                 </div>
                                             </div>
+                                            <div id="sales-graph-loader">
+
+                                            </div>
+
                                             <div class="row" style="height: 225px;">
                                                 <canvas class="py-2" id="gross-sales-chart"></canvas>
                                             </div>
@@ -224,6 +228,9 @@
                                 <div class="col-md-3">
                                     <div class="card shadow" style="height: 400px;">
                                         <div class="card-body">
+                                            <div id="top-sellers-graph-loader">
+
+                                            </div>
                                             <div class="row">
                                                 <div class="col">
                                                     <canvas class="p-3" id="topSellersChart"></canvas>
